# whisperSSTis

./: .gitignore  CITATION.cff  CLAUDE.md  HERCULES.md  MODERNIZATION_PROGRESS.md  README.md  about_WhisperSSTis.md  agents.md  app.py  architecture.jsonld  env.example  hercules_server.py  hercules_test.py  launcher.py  native_app.py  pyproject.toml  requirements.txt  verify_sounddevice.py
.claude/: SELF-OPTIMIZATION-REPORT.md  settings.json
.claude/commands/: new-feature.md  pre-commit.md  test.md  update-architecture.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/missions/: MODERNIZATION_REPORT.md
hercules/: README.md  SETUP_COMMANDS.md  deploy.sh  whisper-server.service
tests/: conftest.py  test_audio.py  test_gpt.py  test_transcribe.py
whisperSSTis/: __init__.py  audio.py  gpt.py  hercules_client.py  transcribe.py
