[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperSSTis"
version = "1.0.0-alpha"
description = "Local-first Icelandic and English speech recognition using fine-tuned Whisper models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Magnus Smari Smarason", email = "magnus@smarason.is"},
]

dependencies = [
    "streamlit>=1.38",
    "torch>=2.0",
    "transformers>=5.0",
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "scipy>=1.11",
    "psutil>=5.9",
]

[project.optional-dependencies]
gpt = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pip-audit>=2.7",
]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
include = ["whisperSSTis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
